# Maze

./: .gitignore  Build.md  README.md  Run_GUI.md  Run_Terminal.md
MazeSolver/: CMakeLists.txt  main.cpp
MazeSolver/algorithms/: AStar.cpp  AStar.h  Dijkstra.cpp  Dijkstra.h  DoubleAStar.cpp  DoubleAStar.h  JumpPointSearch.cpp  JumpPointSearch.h
MazeSolver/build_gui/MazeSolverGUI_autogen/: deps  moc_predefs.h
MazeSolver/build_gui/MazeSolverGUI_autogen/DMHXEJ42XS/: moc_ControlPanel.cpp  moc_ControlPanel.cpp.d  moc_MainWindow.cpp.d  moc_MazeWidget.cpp.d
MazeSolver/build_terminal/MazeSolverGUI_autogen/: deps  mocs_compilation.cpp
MazeSolver/build_terminal/MazeSolverGUI_autogen/DMHXEJ42XS/: moc_ControlPanel.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MazeWidget.cpp  moc_MazeWidget.cpp.d
MazeSolver/core/: Cell.h  Maze.cpp  Maze.h  Types.h  Utility.cpp  Utility.h
MazeSolver/gui/: BackendInterface.h  ControlPanel.cpp  ControlPanel.h  MainWindow.cpp  MainWindow.h  MazeWidget.cpp  MazeWidget.h  Types.h  main_gui.cpp
build_gui/: compile_commands.json
maze-solver-visualizer/: CMakeLists.txt
maze-solver-visualizer/MazeVisualizer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
maze-solver-visualizer/MazeVisualizer/backend/algorithms/: AStar.cpp  Dijkstra.h  DoubleAStar.cpp
maze-solver-visualizer/MazeVisualizer/backend/core/: AlgorithmResult.h  Maze.cpp  Maze.h  Utility.cpp
maze-solver-visualizer/MazeVisualizer/ui/: MazeWidget.h
maze-solver-visualizer/src/: main.cpp
maze-solver-visualizer/src/algorithms/: AStar.h  Dijkstra.cpp  DoubleAStar.h
maze-solver-visualizer/src/core/: Cell.h  Utility.h
